@@ -1,13 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.417 2005/10/16 20:34:49 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.418 2005/10/16 21:10:03 agaffney Exp $
 
 *GLI-0.3 (5 Oct 2005)
 
   16 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/handlers/WebGLIHandler.py:
   URI browser
+  src/GLIUtility.py:
+  ls via ssh strips off ending *
 
   16 Oct 2005; Preston Cody <codeman@gentoo.org>
   more updates to webgli.  stage selection.
